--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -1,6 +1,7 @@
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #676767; }
+  font-family: 'Roboto', sans-serif;
+  color: #676767;
+  -webkit-font-smoothing: antialiased; }
 
 .navbar.navbar-default {
   background-color: #fff;
@@ -9,6 +10,10 @@ body {
   height: auto; }
 .navbar .navbar-nav, .navbar .navbar-toggle {
   margin-top: 30px; }
+.navbar .navbar-nav li a {
+  padding-bottom: 5px; }
+  .navbar .navbar-nav li a:hover {
+    border-bottom: 3px solid #68b0c7; }
 
 .parallax {
   width: 100%;
@@ -66,7 +71,7 @@ h3 {
     margin-top: -20px; }
   h3.ft-center {
     margin: 0 auto;
-    width: 132px;
+    width: 152px;
     display: block;
     top: -20px; }
   h3.ft-right:after {
@@ -202,3 +207,8 @@ h3 {
     padding: 15px 0 0; }
     .footer .copy p {
       line-height: 60px; }
+
+@media (max-width: 768px) {
+  .parallax .parallax-text {
+    left: 0;
+    margin-left: auto; } }
