--- a/css/landing-page.scss
+++ b/css/landing-page.scss
@@ -93,14 +93,17 @@ h3 {
 		display: block;
 		top: -20px;
 	}
-	&.ft-right:after {
-		border: 10px solid transparent;
-		border-left: 10px solid #1dbfee;
-		bottom: 50%;
-		left: auto;
-		right: -18px;
-		margin-left: 0;
-		margin-bottom: -10px;
+	&.ft-right {
+		margin-bottom: 30px;
+		&:after {
+			border: 10px solid transparent;
+			border-left: 10px solid #1dbfee;
+			bottom: 50%;
+			left: auto;
+			right: -18px;
+			margin-left: 0;
+			margin-bottom: -10px;
+		}
 	}
 	
 }
@@ -171,7 +174,7 @@ h3 {
 		}
 	}
 	p {
-		padding: 0 15px 0 30px;
+		padding: 0 0 0 30px;
 		overflow: hidden;
 		border-left: 1px solid #b5b5b5;
 	}	
@@ -272,8 +275,18 @@ h3 {
 }
 
 @media (max-width: 768px) {
-	.parallax .parallax-text {
-		left: 0;
-		margin-left: auto;
+	.parallax {
+		height: 470px;
+		.parallax-image {
+			background-position: center -100px;
+		}
+		.parallax-text {
+			top: 100px;
+			left: 0;
+			margin-left: auto;
+			h2 {
+				font-size: 50px;
+			}
+		}
 	}
 }
