--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -210,6 +210,31 @@ h3 {
     .footer .copy p {
       line-height: 60px; }
 
+/* Override bootstrap carousel */
+.carousel .carousel-indicators {
+  bottom: 0;
+  margin-bottom: 0; }
+  .carousel .carousel-indicators li {
+    border: 1px solid #A0A0A0; }
+    .carousel .carousel-indicators li.active {
+      background: #a0a0a0; }
+.carousel .carousel-control {
+  color: #676767;
+  width: 30px;
+  text-shadow: none;
+  background-image: none !important;
+  background: #fff;
+  height: 30px;
+  top: 50%;
+  margin-top: -15px; }
+  .carousel .carousel-control .glyphicon-chevron-left,
+  .carousel .carousel-control .glyphicon-chevron-right {
+    top: 5px; }
+  .carousel .carousel-control .glyphicon-chevron-left {
+    left: 5px; }
+  .carousel .carousel-control .glyphicon-chevron-right {
+    right: 5px; }
+
 @media (max-width: 768px) {
   .parallax {
     height: 470px; }
