--- a/css/landing-page.scss
+++ b/css/landing-page.scss
@@ -274,6 +274,41 @@ h3 {
 	}
 }
 
+/* Override bootstrap carousel */
+
+.carousel {
+	.carousel-indicators {
+		bottom: 0;
+		margin-bottom: 0;
+		li {
+			border: 1px solid #A0A0A0;
+			&.active {
+				background: #a0a0a0;
+			}
+		}
+	}
+	.carousel-control {
+		color: #676767;
+		width: 30px;
+		text-shadow: none;
+		background-image: none !important;
+		background: #fff;
+		height: 30px;
+		top: 50%;
+		margin-top: -15px;
+		.glyphicon-chevron-left, 
+		.glyphicon-chevron-right {
+			top: 5px;
+		}
+		.glyphicon-chevron-left {
+			left: 5px;
+		}
+		.glyphicon-chevron-right {
+			right: 5px;
+		}
+	}
+}
+
 @media (max-width: 768px) {
 	.parallax {
 		height: 470px;
