--- a/css/landing-page.scss
+++ b/css/landing-page.scss
@@ -201,8 +201,8 @@ h3 {
 		}
 		span {
 			background: #d7d7d7;
-			padding: 5px 10px;
-			display: inline-block;
+			line-height: 23px;
+			box-shadow: 5px 0 0 #d7d7d7, -5px 0 0 #d7d7d7;
 		}
 	}
 }
