--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -5,11 +5,13 @@ body {
 
 .navbar.navbar-default {
   background-color: #fff;
-  border-bottom: 1px solid #4a4a4a; }
+  border-bottom: 1px solid #E9E9E9; }
 .navbar .navbar-brand {
-  height: auto; }
+  height: auto;
+  padding: 10px 15px; }
 .navbar .navbar-nav, .navbar .navbar-toggle {
-  margin-top: 30px; }
+  margin-top: 17px;
+  margin-bottom: 0; }
 .navbar .navbar-nav li a {
   padding-bottom: 5px; }
   .navbar .navbar-nav li a:hover {
@@ -41,13 +43,17 @@ body {
     background-image: url(../img/parralax-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    position: fixed;
     background-position: center center;
     width: 100%;
     height: 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover; }
+
+.site-content {
+  position: relative;
+  background: #fff; }
 
 h3 {
   color: #fff;
@@ -206,9 +212,7 @@ h3 {
   .footer .copy {
     background: #4a4a4a;
     color: #fff;
-    padding: 15px 0 0; }
-    .footer .copy p {
-      line-height: 60px; }
+    padding: 15px 0 5px; }
 
 /* Override bootstrap carousel */
 .carousel .carousel-indicators {
@@ -236,12 +240,17 @@ h3 {
     right: 5px; }
 
 @media (max-width: 768px) {
+  .navbar-brand img {
+    width: 60px;
+    height: auto; }
+
   .parallax {
-    height: 470px; }
+    height: 500px; }
     .parallax .parallax-image {
-      background-position: center -100px; }
+      background-position: center -100px;
+      position: relative; }
     .parallax .parallax-text {
-      top: 100px;
+      top: 60px;
       left: 0;
       margin-left: auto; }
       .parallax .parallax-text h2 {
