--- a/css/landing-page.scss
+++ b/css/landing-page.scss
@@ -322,6 +322,7 @@ h3 {
 	
 	.parallax {
 		height: 500px;
+		margin-bottom: -100px;
 		.parallax-image {
 			background-position: center -100px;
 			position: relative;
