--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -40,6 +40,7 @@ body {
       display: inline-block;
       padding: 5px 10px; }
   .parallax .parallax-image {
+    background-color: #6651a1;
     background-image: url(../img/parralax-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
