--- a/css/landing-page.scss
+++ b/css/landing-page.scss
@@ -54,6 +54,7 @@ body {
 		}
 	}
 	.parallax-image {
+		background-color: #6651a1;
 		background-image: url(../img/parralax-bg.jpg);
 		background-repeat: no-repeat;
 		background-size: cover;
