smaller image files

--- a/css/landing-page.scss
+++ b/css/landing-page.scss
@@ -421,7 +421,9 @@ h3 {
 		margin-bottom: -100px;
 		.parallax-image {
 			background-position: center -100px;
+			background-image: url(../img/parralax-bg-mobile.jpg);
 			position: relative;
+			
 		}
 		.parallax-text {
 			top: 60px;
