--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -324,6 +324,7 @@ h3 {
     margin-bottom: -100px; }
     .parallax .parallax-image {
       background-position: center -100px;
+      background-image: url(../img/parralax-bg-mobile.jpg);
       position: relative; }
     .parallax .parallax-text {
       top: 60px;
