--- a/css/landing-page.scss
+++ b/css/landing-page.scss
@@ -2,6 +2,7 @@
 
 body {
 	font-family: 'Roboto', sans-serif;
+	font-weight: 400;
 	color: #676767;
 	-webkit-font-smoothing: antialiased;
 }
@@ -52,6 +53,7 @@ img {
 		h1 {
 			color: #fff;
 			font-size: 70px;
+			font-weight: 400;
 		}
 		p {
 			background: rgba(29, 191, 238, 0.5);
@@ -213,7 +215,7 @@ h3 {
 		text-align: center;
 		margin-top: -10px;
 		margin-right: -20px;
-		font-weight: bold;
+		font-weight: 700;
 		&.red {
 			color: #b31e1e;
 		}
@@ -453,5 +455,13 @@ h3 {
 	}
 	.team {
 		padding-top: 0;
+	}
+	.footer {
+		.map {
+			display: none;
+		}
+		.contact-info {
+			margin-top: 0;
+		}
 	}
 }
