--- a/css/landing-page.scss
+++ b/css/landing-page.scss
@@ -294,6 +294,78 @@ h3 {
 	
 }
 
+.single-project {
+	background: #321a32 url(../img/bg-pattern.jpg) 0 0 repeat;
+	height: 380px;
+    margin-bottom: 50px;
+	padding-right: 30px;
+	border-radius: 3px;
+	.single-project-item {
+		padding: 35px 30px 60px;
+		background: url(../img/feature-img.png) right bottom no-repeat;
+		color: #fff;
+		.btn {
+			border-radius: 30px;
+		}
+		h2 {
+			font-size: 34px;
+			font-weight: bold;
+			margin: 0 0 40px;
+		}
+		h4 {
+			font-size: 24px;
+			margin-bottom: 30px;
+		}
+		p {
+			max-width: 480px;
+			font-size: 17px;
+			line-height: 30px;
+		}
+		.call-to-action {
+			margin-top: 40px;
+		}
+		
+		@media (min-width: 992px) and (max-width: 1199px) {
+			padding: 30px 500px 145px 30px;
+			background-position: right 30px;
+			h2 {
+				margin: 0 0 30px;
+			}
+			.call-to-action {
+				margin-top: 20px;
+			}
+		}
+		@media (max-width: 991px) { 
+			background-size: 250px;
+			background-position: right bottom;
+			padding: 30px 30px 110px;
+			p {
+				max-width: 100%;
+			}
+			h2 {
+				margin: 0 0 30px;
+			}
+		}
+		@media (max-width: 736px) {
+			background-position: center 96%;
+			padding: 30px 15px 200px;
+			.call-to-action {
+				margin: 20px 0;
+			}
+		}
+	}
+	@media (max-width: 736px) { 
+		height: auto;
+		margin: 20px 0 0;
+		padding: 0;
+		text-align: center;
+	}
+}
+
+
+
+
+
 .blog {
 	margin-top: 40px;
 	padding-bottom: 30px;
